# Process this file with autoconf to produce a configure script.
AC_INIT(../Source/OSStartup/main.cpp)
AM_INIT_AUTOMAKE(FishGUI, 1.0)

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.
AC_PATH_XTRA

if test x"$no_x" != x"yes"; then
	AC_DEFINE(HAVE_LIBX11)
fi
if test x"$X_LIBS" != x""; then
	LIBS="$LIBS $X_LIBS"
fi

AC_CHECK_LIB(X11, XOpenDisplay,, AC_MSG_ERROR(Cannot Find X11 Library!))
AC_CHECK_LIB(Xpm, XpmReadFileToPixmap,, AC_MSG_ERROR(Cannot Find Xpm Library!))

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h])
AC_CHECK_HEADERS(X11/keysym.h X11/Xlib.h X11/Xutil.h X11/Xutil.h) 
AC_CHECK_HEADERS(X11/xpm.h,, AC_MSG_ERROR(Cannot Find Xpm Include File!))

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME

# Checks for library functions.

AC_OUTPUT(Makefile)
