AUTOMAKE_OPTIONS=foreign

bin_PROGRAMS = FishGUI

FishGUI_SOURCES = ../Source/OSStartup/main.cpp                    \
                                                                  \
                  ../Source/Application/MyApp.cpp                 \
                  ../Source/Application/MainWindow.cpp            \
                  ../Source/Application/Win1.cpp                  \
                  ../Source/Application/Win2.cpp                  \
                  ../Source/Application/MyButton.cpp              \
                                                                  \
                  ../Source/Framework/FG_Application.cpp          \
                  ../Source/Framework/FG_Object.cpp               \
                  ../Source/Framework/FG_Container.cpp            \
                  ../Source/Framework/FG_Window.cpp               \
                  ../Source/Framework/FG_Screen.cpp               \
                  ../Source/Framework/FG_Widget.cpp               \
                  ../Source/Framework/FG_TextWidget.cpp           \
                  ../Source/Framework/FG_Group.cpp                \
                  ../Source/Framework/FG_Bitmap.cpp               \
                  ../Source/Framework/FG_Button.cpp               \
                  ../Source/Framework/FG_Label.cpp                \
                  ../Source/Framework/FG_Edit.cpp                 \
                  ../Source/Framework/FG_CheckBox.cpp             \
                  ../Source/Framework/FG_RadioButton.cpp          \
                  ../Source/Framework/FG_TimerManager.cpp         \
                  ../Source/Framework/FG_KeyMap.cpp               \
                  ../Source/Framework/FG_MsgMap.cpp               \
                                                                  \
                  ../Source/OSAdaptor/FG_X11Adaptor.cpp           \
                  ../Source/OSAdaptor/FG_X11DrawInterface.cpp     \
                  ../Source/OSAdaptor/FG_OSAdaptor.cpp            \
                                                                  \
                  ../Source/Utility/FG_String.cpp                 \
                  ../Source/Utility/FG_Rect.cpp

              
